--- a/ui/flex/package.json
+++ b/ui/flex/package.json
@@ -31,12 +31,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "2.1.1",
-    "@clutchd/twx": "1.1.3"
+    "@clutchd/component": "2.1.1"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
-    "@clutchd/tailwind": "2.0.4",
     "@clutchd/tsconfig": "1.2.1",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.2",
