--- a/ui/block/package.json
+++ b/ui/block/package.json
@@ -31,8 +31,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "2.1.1",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/component": "2.1.1"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
