--- a/ui/layout/package.json
+++ b/ui/layout/package.json
@@ -32,8 +32,7 @@
   },
   "dependencies": {
     "@clutchd/component": "2.1.1",
-    "@clutchd/flex": "2.0.0",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/flex": "2.0.0"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
