--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -57,10 +57,17 @@
     "@types/react-dom": "18.2.6",
     "jest": "29.5.0",
     "react": "18.2.0",
+    "tailwind-merge": "1.13.2",
     "tsup": "7.1.0",
     "typescript": "5.1.6"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.2",
+    "tailwind-merge": "^1.13"
+  },
+  "peerDependenciesMeta": {
+    "tailwind-merge": {
+      "optional": true
+    }
   }
 }
