--- a/ui/grid/package.json
+++ b/ui/grid/package.json
@@ -31,8 +31,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "2.2.0",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/component": "2.2.0"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
