--- a/ui/button/package.json
+++ b/ui/button/package.json
@@ -32,12 +32,13 @@
   },
   "dependencies": {
     "@clutchd/component": "2.2.0",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/link": "workspace:1.3.0"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
     "@clutchd/tailwind": "2.0.4",
     "@clutchd/tsconfig": "1.2.1",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
