--- a/ui/button/package.json
+++ b/ui/button/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@clutchd/component": "2.2.0",
-    "@clutchd/link": "workspace:1.3.0"
+    "@clutchd/link": "1.3.0"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
