--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -32,18 +32,17 @@
   },
   "dependencies": {
     "@clutchd/component": "2.2.0",
-    "@clutchd/divider": "1.2.17",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/divider": "1.2.17"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
     "@clutchd/tailwind": "2.0.4",
     "@clutchd/tsconfig": "1.2.1",
     "@types/jest": "29.5.2",
-    "@types/node": "20.4.0",
+    "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.0",
+    "jest": "29.6.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "tsup": "7.1.0",
