--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -31,16 +31,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@clutchd/component": "2.2.0",
     "@clutchd/text": "2.1.17"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
     "@clutchd/tsconfig": "1.2.1",
     "@types/jest": "29.5.2",
-    "@types/node": "20.4.0",
+    "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.0",
+    "jest": "29.6.1",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
