--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -31,18 +31,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "2.2.0",
-    "@clutchd/twx": "1.1.4"
+    "@clutchd/component": "2.2.0"
   },
   "devDependencies": {
     "@clutchd/jest": "1.0.3",
     "@clutchd/tsconfig": "1.2.1",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
-    "@types/node": "20.4.0",
+    "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.0",
+    "jest": "29.6.1",
     "next-auth": "4.18.6",
     "postcss": "8.4.25",
     "react": "18.2.0",
