prep for final reworks

--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "@clutchd/tsconfig/nextjs.json"
+  "extends": "@clutchd/tsconfig/nextjs.json",
+  "compilerOptions": {
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
+  },
+  "include": ["next-env.d.ts", ".next/types/**/*.ts"]
 }
