--- a/ui/compose-refs/package.json
+++ b/ui/compose-refs/package.json
@@ -44,9 +44,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "0.2.0",
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
