--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "dependencies": {
     "@changesets/cli": "2.26.2",
-    "@clutchd/eslint-config-clutchd": "1.1.2",
+    "@clutchd/eslint-config-clutchd": "workspace:*",
     "@manypkg/cli": "0.21.0",
     "eslint": "8.44.0",
     "prettier": "2.8.8",
     "turbo": "1.10.7"
+  },
+  "manypkg": {
+    "ignoredRules": [
+      "INTERNAL_MISMATCH"
+    ]
   },
   "engines": {
     "node": ">=18.0.0",
