--- a/packages/bundlejs/package.json
+++ b/packages/bundlejs/package.json
@@ -34,8 +34,8 @@
     "node-fetch": "2.6.1"
   },
   "devDependencies": {
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
     "@types/node-fetch": "2.6.4",
