--- a/packages/clsx/benchmark/package.json
+++ b/packages/clsx/benchmark/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
-    "@clutchd/clsx": "1.0.6",
+    "@clutchd/clsx": "workspace:*",
     "benchmark": "^2.1.4",
     "classcat": "^5.0.4",
     "classnames": "^2.3.2",
