--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -31,12 +31,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "2.2.0",
-    "@clutchd/text": "2.1.17"
+    "@clutchd/component": "workspace:*",
+    "@clutchd/text": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
