--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -30,11 +30,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/is-empty": "2.0.7"
+    "@clutchd/is-empty": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
     "jest": "29.6.1",
