--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -30,9 +30,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "0.2.0",
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
     "jest": "29.6.1",
