--- a/ui/slot/package.json
+++ b/ui/slot/package.json
@@ -44,13 +44,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/compose-props": "1.4.0",
-    "@clutchd/compose-refs": "1.1.6"
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/compose-refs": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "0.2.0",
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/bundlejs": "workspace:*",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
