--- a/ui/tailwind/package.json
+++ b/ui/tailwind/package.json
@@ -29,8 +29,8 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@clutchd/jest": "1.0.3",
-    "@clutchd/tsconfig": "1.2.1",
+    "@clutchd/jest": "workspace:*",
+    "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
     "jest": "29.6.1",
