--- a/ui/button/package.json
+++ b/ui/button/package.json
@@ -31,8 +31,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/link": "workspace:*"
+    "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
