--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -7,14 +7,25 @@
     "dev": "next dev -p 3001",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "start": "next start",
-    "test": "jest --passWithNoTests"
+    "test": "dotenv -- jest --passWithNoTests"
   },
   "dependencies": {
+    "@clutchd/avatar": "workspace:*",
+    "@clutchd/block": "workspace:*",
+    "@clutchd/button": "workspace:*",
+    "@clutchd/card": "workspace:*",
     "@clutchd/component": "workspace:*",
+    "@clutchd/copyright": "workspace:*",
+    "@clutchd/divider": "workspace:*",
+    "@clutchd/flex": "workspace:*",
+    "@clutchd/grid": "workspace:*",
+    "@clutchd/input": "workspace:*",
+    "@clutchd/label": "workspace:*",
+    "@clutchd/layout": "workspace:*",
+    "@clutchd/link": "workspace:*",
+    "@clutchd/text": "workspace:*",
     "@vercel/analytics": "1.0.1",
     "next": "13.4.9",
-    "nextra": "2.9.0",
-    "nextra-theme-docs": "2.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,6 +36,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "dotenv-cli": "7.2.1",
     "jest": "29.6.1",
     "postcss": "8.4.27",
     "tailwindcss": "3.3.2",
