Merges classes by default, component now accepts a function for merge

--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -62,12 +62,6 @@
     "typescript": "5.1.6"
   },
   "peerDependencies": {
-    "react": "^18.2",
-    "tailwind-merge": "^1.13"
-  },
-  "peerDependenciesMeta": {
-    "tailwind-merge": {
-      "optional": true
-    }
+    "react": "^18.2"
   }
 }
