--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -32,7 +32,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/clsx": "workspace:*"
+    "@clutchd/clsx": "workspace:*",
+    "tailwind-merge": "1.14.0"
   },
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
