--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -7,5 +7,11 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts"]
+  "include": [
+    "/**/*.ts",
+    "/**/*.tsx",
+    "/**/*.d.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ]
 }
