--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -50,6 +50,7 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@clutchd/twx": "workspace:*",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.4.1",
@@ -57,11 +58,16 @@
     "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
     "react": "18.2.0",
-    "tailwind-merge": "1.13.2",
     "tsup": "7.1.0",
     "typescript": "5.1.6"
   },
   "peerDependencies": {
+    "@clutchd/twx": "^workspace:*",
     "react": "^18.2"
+  },
+  "peerDependenciesMeta": {
+    "@clutchd/twx": {
+      "optional": true
+    }
   }
 }
