--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -62,7 +62,7 @@
     "typescript": "5.1.6"
   },
   "peerDependencies": {
-    "@clutchd/twx": "^workspace:*",
+    "@clutchd/twx": "^1.1",
     "react": "^18.2"
   },
   "peerDependenciesMeta": {
