--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -24,6 +24,7 @@
     "@clutchd/layout": "workspace:*",
     "@clutchd/link": "workspace:*",
     "@clutchd/text": "workspace:*",
+    "@clutchd/twx": "workspace:*",
     "@vercel/analytics": "1.0.1",
     "next": "13.4.9",
     "react": "18.2.0",
