--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -29,9 +29,9 @@
     }
   },
   "source": "./src/index.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/index",
+  "module": "dist/index",
+  "types": "dist/index",
   "files": [
     "dist"
   ],
