--- a/ui/divider/package.json
+++ b/ui/divider/package.json
@@ -18,9 +18,9 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/index",
+  "module": "dist/index",
+  "types": "dist/index",
   "files": [
     "dist"
   ],
