--- a/ui/link/package.json
+++ b/ui/link/package.json
@@ -31,9 +31,9 @@
     }
   },
   "source": "./src/index.tsx",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/index",
+  "module": "dist/index",
+  "types": "dist/index",
   "files": [
     "dist"
   ],
