--- a/ui/divider/package.json
+++ b/ui/divider/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
     "@clutchd/tailwind": "workspace:*"
   },
   "devDependencies": {
