--- a/ui/grid/package.json
+++ b/ui/grid/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
     "@clutchd/tailwind": "workspace:*"
   },
   "devDependencies": {
