--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 3000",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "start": "next start",
-    "test": "dotenv -- jest --passWithNoTests"
+    "test": "bun test --coverage"
   },
   "dependencies": {
     "@clutchd/layout": "workspace:*",
@@ -18,14 +18,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "dotenv-cli": "7.3.0",
-    "jest": "29.6.1",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
