--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -27,21 +27,18 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "dependencies": {
     "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.1",
     "next": "14.0.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
