--- a/packages/bundlejs/package.json
+++ b/packages/bundlejs/package.json
@@ -26,20 +26,17 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --minify",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "dependencies": {
     "@hazae41/foras": "2.0.8",
     "node-fetch": "2.6.7"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/node-fetch": "2.6.4",
-    "jest": "29.6.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   }
