--- a/packages/is-empty/package.json
+++ b/packages/is-empty/package.json
@@ -26,16 +26,13 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
-    "jest": "29.6.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   }
