--- a/packages/next-auth-prisma-adapter/package.json
+++ b/packages/next-auth-prisma-adapter/package.json
@@ -27,18 +27,15 @@
     "build": "prisma generate && tsup src/index.ts --format esm,cjs --dts --minify",
     "dev": "prisma generate && tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@prisma/client": "4.9.0",
-    "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.1",
     "next-auth": "4.24.4",
     "prisma": "5.5.2",
     "tsup": "7.2.0",
