--- a/packages/protect/package.json
+++ b/packages/protect/package.json
@@ -27,17 +27,14 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
-    "jest": "29.6.1",
     "next": "14.0.4",
     "next-auth": "4.24.4",
     "postcss": "8.4.31",
