--- a/packages/get-initials/package.json
+++ b/packages/get-initials/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
+    "@types/bun": "latest",
     "@types/node": "20.9.2",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
