--- a/packages/eslint-config-clutchd/package.json
+++ b/packages/eslint-config-clutchd/package.json
@@ -22,5 +22,8 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-config-turbo": "1.10.16",
     "eslint-plugin-react": "7.33.2"
+  },
+  "devDependencies": {
+    "@types/eslint-config-prettier": "6.11.3"
   }
 }
