--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -27,21 +27,19 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage --preload='./preload.ts'"
   },
   "dependencies": {
     "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@happy-dom/global-registrator": "12.10.3",
+    "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
+    "@types/bun": "latest",
     "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
-    "jest": "29.6.1",
     "next-auth": "4.24.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
