--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "scripts": {
     "benchmark": "turbo run benchmark",
     "build": "turbo run build",
-    "changeset": "changeset",
+    "changeset": "bunx changeset",
     "clean": "find . -type d \\( -name '.next'  -o -name '.turbo' -o -name 'coverage' -o -name 'dist' -o -name 'node_modules' \\) -prune -print -exec rm -rf '{}' \\;",
     "dev": "turbo run dev --parallel",
     "preinstall": "bunx only-allow bun",
     "format": "prettier --write \"**/*.{js,json,jsx,ts,tsx,md,mdx}\"",
-    "postinstall": "manypkg check",
+    "postinstall": "bunx patch-package && manypkg check",
     "lint": "turbo run lint",
     "release": "turbo run build && changeset publish",
     "test": "turbo run test",
@@ -24,7 +24,7 @@
     "version-packages": "changeset version"
   },
   "dependencies": {
-    "@changesets/cli": "2.26.2",
+    "@changesets/cli": "2.27.1",
     "@clutchd/eslint-config-clutchd": "workspace:*",
     "@manypkg/cli": "0.21.0",
     "eslint": "8.56.0",
@@ -36,7 +36,6 @@
       "INTERNAL_MISMATCH"
     ]
   },
-  "packageManager": "bun@1.0.21",
   "engines": {
     "node": ">=18.0.0"
   }
