--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@manypkg/cli": "0.21.0",
     "eslint": "8.56.0",
     "prettier": "2.8.8",
-    "turbo": "1.10.16"
+    "turbo": "latest"
   },
   "manypkg": {
     "ignoredRules": [
