--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -17,17 +17,23 @@ jobs:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
     steps:
-      - uses: oven-sh/setup-bun@v1
+      - name: Setup Environment
+        id: setup
+        uses: clutchd/turbostart-pnpm@v3.0.0
+
+      - name: Bun Runtime
+        id: setup-bun
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
       - name: Lint
         id: lint
-        run: bun run lint
+        run: pnpm run lint
 
       - name: Test
         id: test
-        run: bun run test
+        run: pnpm run test
 
       - name: Upload Code Coverage
         id: codecov
@@ -42,4 +48,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' && !cancelled() }}
         uses: changesets/action@v1
         with:
-          publish: bun run release
+          publish: pnpm run release
