--- a/.github/workflows/turbotest.yml
+++ b/.github/workflows/turbotest.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Dependencies
         shell: bash
-        run: pnpm i
+        run: bun i
 
       - name: Lint
         id: lint
