--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -28,19 +28,17 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --minify",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "dependencies": {
     "@clutchd/clsx": "workspace:*",
     "tailwind-merge": "1.14.0"
   },
   "devDependencies": {
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
-    "jest": "29.6.1",
+    "@types/bun": "^1.0.1",
+    "@types/node-fetch": "2.6.10",
     "node-fetch": "2.6.7",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
