--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -34,9 +34,9 @@
     "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
+    "@clutchd/bun-jest-dom": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@happy-dom/global-registrator": "12.10.3",
-    "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/bun": "latest",
     "@types/react": "18.2.47",
