--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -36,22 +36,19 @@
     "dist"
   ],
   "scripts": {
-    "benchmark": "node ./benchmark/clsx.benchmark.js",
+    "benchmark": "bun run ./benchmark/clsx.benchmark.js",
     "build": "tsup src/index.ts --format esm,cjs --dts --minify",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest",
-    "validate": "pnpm run build && pnpm run benchmark && pnpm run test"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage",
+    "validate": "bun run build && bun run benchmark && bun run test --coverage"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
+    "@types/node-fetch": "2.6.10",
     "clsx": "2.0.0",
-    "jest": "29.6.1",
     "node-fetch": "2.6.7",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
