--- a/ui/slot/package.json
+++ b/ui/slot/package.json
@@ -40,8 +40,8 @@
     "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "pnpm run build",
-    "test": "jest"
+    "prepublish": "bun run build",
+    "test": "bun test --coverage"
   },
   "dependencies": {
     "@clutchd/compose-props": "workspace:*",
@@ -49,14 +49,9 @@
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
-    "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
-    "jest": "29.6.1",
     "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
