--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -15,6 +15,7 @@
     "directory": "packages/config"
   },
   "author": "Clutchd, LLC",
+  "type": "module",
   "main": "index.js",
   "files": [
     "*.config.js"
