--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -15,6 +15,7 @@
     "directory": "packages/tsconfig"
   },
   "author": "Clutchd, LLC",
+  "type": "module",
   "files": [
     "base.json",
     "nextjs.json",
