--- a/packages/twx/package.json
+++ b/packages/twx/package.json
@@ -18,6 +18,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "main": "dist/index",
   "module": "dist/index",
   "types": "dist/index",
