--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@clutchd/ui",
   "version": "0.11.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev -p 3001",
