--- a/packages/bundlejs/package.json
+++ b/packages/bundlejs/package.json
@@ -16,6 +16,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "main": "dist/index",
   "module": "dist/index",
   "types": "dist/index",
