--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -16,6 +16,7 @@
     "directory": "packages/config"
   },
   "author": "Clutchd, LLC",
+  "type": "module",
   "main": "index.js",
   "files": [
     "*.config.js",
