--- a/ui/block/package.json
+++ b/ui/block/package.json
@@ -17,6 +17,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "main": "dist/index",
   "module": "dist/index",
   "types": "dist/index",
