--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -17,6 +17,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "import": {
@@ -29,9 +30,9 @@
       }
     }
   },
-  "source": "./src/index.tsx",
   "main": "dist/index",
   "module": "dist/index",
+  "source": "./src/index.tsx",
   "types": "dist/index",
   "files": [
     "dist"
