--- a/ui/compose-event-handlers/package.json
+++ b/ui/compose-event-handlers/package.json
@@ -19,6 +19,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "import": {
@@ -31,9 +32,9 @@
       }
     }
   },
-  "source": "./src/index.ts",
   "main": "dist/index",
   "module": "dist/index",
+  "source": "./src/index.ts",
   "types": "dist/index",
   "files": [
     "dist"
