--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -19,6 +19,7 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "type": "module",
   "main": "dist/index",
   "module": "dist/index",
   "types": "dist/index",
