--- a/ui/slot/package.json
+++ b/ui/slot/package.json
@@ -17,28 +17,12 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      }
-    }
-  },
-  "main": "dist/index",
-  "module": "dist/index",
-  "source": "./src/index.tsx",
-  "types": "dist/index",
-  "files": [
-    "dist"
-  ],
+  "type": "module",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --minify",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts",
+    "build": "tsup src/index.tsx --format esm --dts --minify",
+    "dev": "tsup src/index.tsx --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
@@ -51,6 +35,7 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/react-slot": "1.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
