--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@clutchd/twx",
-  "version": "2.0.0",
-  "description": "Combining the powers of @clutchd/clsx and tailwind-merge.",
+  "name": "@clutchd/clsx",
+  "version": "1.0.7",
+  "description": "A tinier (225B), more performant implementation of clsx.",
   "keywords": [
     "clutchd",
-    "clsx",
-    "twx",
-    "tailwind"
+    "clsx"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -14,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/twx"
+    "directory": "packages/utils/clsx"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -22,21 +20,21 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "benchmark": "node ./benchmark/clsx.benchmark.js",
     "build": "tsup src/index.ts --format esm --dts --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@clutchd/clsx": "workspace:*",
-    "tailwind-merge": "1.14.0"
+    "test": "jest",
+    "validate": "pnpm run build && pnpm run benchmark && pnpm run test"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
+    "clsx": "2.0.0",
     "jest": "29.6.1",
     "node-fetch": "2.6.7",
     "tsup": "7.2.0",
