--- a/packages/tooling/config/package.json
+++ b/packages/tooling/config/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/config"
+    "directory": "packages/tooling/config"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
