--- a/packages/primitives/compose-props/package.json
+++ b/packages/primitives/compose-props/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@clutchd/next-auth-prisma-adapter",
-  "version": "1.1.0",
+  "name": "@clutchd/compose-props",
+  "version": "2.0.0",
+  "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
   "keywords": [
     "clutchd",
-    "next-auth",
-    "prisma",
-    "next"
+    "compose-props",
+    "props"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/next-auth-prisma-adapter"
+    "directory": "packages/primitives/compose-props"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -21,28 +21,23 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "prisma generate && tsup src/index.ts --format esm --dts --minify",
-    "dev": "prisma generate && tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.ts --format esm --dts --minify",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
   },
+  "dependencies": {
+    "@clutchd/compose-event-handlers": "workspace:*"
+  },
   "devDependencies": {
+    "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@prisma/client": "4.9.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
-    "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
-    "next-auth": "4.24.4",
-    "prisma": "5.5.2",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
-  },
-  "peerDependencies": {
-    "@prisma/client": "^4.9",
-    "next-auth": "^4.24"
   }
 }
