--- a/packages/primitives/compose-refs/package.json
+++ b/packages/primitives/compose-refs/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "ui/compose-refs"
+    "directory": "packages/primitives/compose-refs"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
