--- a/packages/ui/button/package.json
+++ b/packages/ui/button/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@clutchd/divider",
-  "version": "3.1.0",
+  "name": "@clutchd/button",
+  "version": "1.2.0",
   "keywords": [
     "clutchd",
-    "divider",
-    "seperator",
-    "tailwind"
+    "button",
+    "tailwind",
+    "next"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/divider"
+    "directory": "packages/ui/button"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -41,12 +41,14 @@
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
+    "next": "14.0.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
+    "next": "^14",
     "react": "^18.2"
   }
 }
