--- a/packages/ui/card/package.json
+++ b/packages/ui/card/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@clutchd/button",
-  "version": "1.2.0",
+  "name": "@clutchd/card",
+  "version": "3.0.0",
   "keywords": [
     "clutchd",
-    "button",
-    "tailwind",
-    "next"
+    "card",
+    "react",
+    "tailwind"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/button"
+    "directory": "packages/ui/card"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -29,26 +29,23 @@
   },
   "dependencies": {
     "@clutchd/component": "workspace:*",
-    "@clutchd/compose-props": "workspace:*",
-    "@clutchd/tailwind": "workspace:*"
+    "@clutchd/compose-props": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
+    "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
-    "next": "14.0.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
-    "next": "^14",
     "react": "^18.2"
   }
 }
