label is stable

--- a/packages/ui/label/package.json
+++ b/packages/ui/label/package.json
@@ -15,7 +15,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/_unstable_/label"
+    "directory": "packages/ui/label"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -37,6 +37,7 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/react-label": "2.0.2",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
