--- a/packages/_unstable_/input/package.json
+++ b/packages/_unstable_/input/package.json
@@ -21,6 +21,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx --format esm --dts --minify",
