--- a/packages/_unstable_/link/package.json
+++ b/packages/_unstable_/link/package.json
@@ -20,6 +20,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx --format esm --dts --minify",
