--- a/packages/_unstable_/next-auth-prisma-adapter/package.json
+++ b/packages/_unstable_/next-auth-prisma-adapter/package.json
@@ -19,6 +19,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "prisma generate && tsup src/index.ts --format esm --dts --minify",
