--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -18,6 +18,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "benchmark": "node ./benchmark/clsx.benchmark.js",
