--- a/packages/utils/get-initials/package.json
+++ b/packages/utils/get-initials/package.json
@@ -18,6 +18,7 @@
   "sideEffects": false,
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx --format esm --dts --minify",
