--- a/packages/utils/tailwind/package.json
+++ b/packages/utils/tailwind/package.json
@@ -16,6 +16,7 @@
   "author": "Clutchd, LLC",
   "sideEffects": false,
   "type": "module",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts-only --minify",
