last major re-organization

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,16 +3,16 @@ packages:
   - "apps/*"
   # all unstable packages
   - "packages/_unstable_/*"
-  # all primitive component packages
-  - "packages/primitives/*"
   # all tooling packages
   - "packages/tooling/*"
   # all standard ui component packages
   - "packages/ui/components/*"
+    # all core ui component packages
+  - "packages/ui/core/*"
   # all layout component packages
-  - "packages/ui/layout/*"
+  - "packages/ui/layout/*layout/*"
   # all typography component packages
-  - "packages/ui/layout/*"
+  - "packages/ui/typograpy/*"
   # all utility packages
   - "packages/utils/*"
   # all packages in a benchmark sub directory
