--- a/packages/ui/components/copyright/package.json
+++ b/packages/ui/components/copyright/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "@clutchd/compose-refs",
-  "version": "2.0.1",
-  "description": "A small utility intended to compose multiple refs into a single ref.",
+  "name": "@clutchd/copyright",
+  "version": "3.0.2",
   "keywords": [
     "clutchd",
-    "compose-refs",
-    "refs"
+    "copyright"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -13,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/primitives/compose-refs"
+    "directory": "packages/ui/components/copyright"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -22,20 +20,20 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --minify",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.tsx --format esm --dts --minify",
+    "dev": "tsup src/index.tsx --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
+  },
+  "dependencies": {
+    "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/react-compose-refs": "1.0.1",
-    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "jest": "29.6.1",
     "react": "18.2.0",
