--- a/packages/ui/components/label/package.json
+++ b/packages/ui/components/label/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@clutchd/compose-props",
-  "version": "3.0.1",
-  "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
+  "name": "@clutchd/label",
+  "version": "4.0.2",
   "keywords": [
     "clutchd",
-    "compose-props",
-    "props"
+    "label",
+    "form",
+    "forms",
+    "tailwind",
+    "next"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -13,7 +15,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/primitives/compose-props"
+    "directory": "packages/ui/components/label"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -22,23 +24,30 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --minify",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.tsx --format esm --dts --minify",
+    "dev": "tsup src/index.tsx --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
   },
   "dependencies": {
+    "@clutchd/component": "workspace:*",
     "@clutchd/compose-event-handlers": "workspace:*"
   },
   "devDependencies": {
-    "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
+    "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/react-label": "2.0.2",
     "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
+    "@types/react": "18.2.47",
     "jest": "29.6.1",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
+  },
+  "peerDependencies": {
+    "react": "^18.2"
   }
 }
