--- a/packages/ui/core/component/package.json
+++ b/packages/ui/core/component/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@clutchd/slot",
-  "version": "2.0.2",
-  "description": "A utility component that merges it's props onto it's child.",
+  "name": "@clutchd/component",
+  "version": "4.0.2",
+  "description": "A primitive component intended to be used as a foundation for all other ui components.",
   "keywords": [
     "clutchd",
-    "slot",
+    "component",
     "ui"
   ],
   "bugs": {
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/primitives/slot"
+    "directory": "packages/ui/core/component"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -29,14 +29,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/compose-props": "workspace:*",
-    "@clutchd/compose-refs": "workspace:*"
+    "@clutchd/slot": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/react-slot": "1.0.2",
+    "@clutchd/twx": "workspace:*",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
@@ -47,6 +46,12 @@
     "typescript": "5.2.2"
   },
   "peerDependencies": {
+    "@clutchd/twx": "^3.0.1",
     "react": "^18.2"
+  },
+  "peerDependenciesMeta": {
+    "@clutchd/twx": {
+      "optional": true
+    }
   }
 }
