--- a/packages/ui/core/compose-event-handlers/package.json
+++ b/packages/ui/core/compose-event-handlers/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@clutchd/label",
-  "version": "4.0.2",
+  "name": "@clutchd/compose-event-handlers",
+  "version": "5.0.0",
+  "description": "A small package that provides multiple event-handler utility functions.",
   "keywords": [
     "clutchd",
-    "label",
-    "form",
-    "forms",
-    "tailwind",
-    "next"
+    "compose-event-handlers",
+    "compose-preventable-event-handlers",
+    "event-handlers",
+    "merge-event-handlers"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -15,7 +15,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/ui/label"
+    "directory": "packages/ui/core/compose-event-handlers"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -24,30 +24,21 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.tsx --format esm --dts --minify",
-    "dev": "tsup src/index.tsx --format esm --dts --watch",
+    "build": "tsup src/index.ts --format esm --dts --minify",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
   },
-  "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/compose-event-handlers": "workspace:*"
-  },
   "devDependencies": {
+    "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
-    "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/primitive": "1.0.1",
     "@types/jest": "29.5.2",
-    "@types/react": "18.2.47",
+    "@types/node": "20.9.2",
     "jest": "29.6.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
-  },
-  "peerDependencies": {
-    "react": "^18.2"
   }
 }
