--- a/packages/ui/core/compose-props/package.json
+++ b/packages/ui/core/compose-props/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@clutchd/copyright",
-  "version": "3.0.2",
+  "name": "@clutchd/compose-props",
+  "version": "3.0.1",
+  "description": "A small utility intended to merge and compose a single props object from the provided prop objects.",
   "keywords": [
     "clutchd",
-    "copyright"
+    "compose-props",
+    "props"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -11,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/_unstable_/copyright"
+    "directory": "packages/ui/core/compose-props"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -20,27 +22,23 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.tsx --format esm --dts --minify",
-    "dev": "tsup src/index.tsx --format esm --dts --watch",
+    "build": "tsup src/index.ts --format esm --dts --minify",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*"
+    "@clutchd/compose-event-handlers": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
-    "@types/react": "18.2.47",
+    "@types/node": "20.9.2",
     "jest": "29.6.1",
-    "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
-  },
-  "peerDependencies": {
-    "react": "^18.2"
   }
 }
