--- a/packages/ui/core/compose-refs/package.json
+++ b/packages/ui/core/compose-refs/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "@clutchd/compose-event-handlers",
-  "version": "5.0.0",
-  "description": "A small package that provides multiple event-handler utility functions.",
+  "name": "@clutchd/compose-refs",
+  "version": "2.0.1",
+  "description": "A small utility intended to compose multiple refs into a single ref.",
   "keywords": [
     "clutchd",
-    "compose-event-handlers",
-    "compose-preventable-event-handlers",
-    "event-handlers",
-    "merge-event-handlers"
+    "compose-refs",
+    "refs"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -15,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/primitives/compose-event-handlers"
+    "directory": "packages/ui/core/compose-refs"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -34,11 +32,17 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/primitive": "1.0.1",
+    "@radix-ui/react-compose-refs": "1.0.1",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
+    "@types/react": "18.2.47",
     "jest": "29.6.1",
+    "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
+  },
+  "peerDependencies": {
+    "react": "^18.2"
   }
 }
