--- a/packages/ui/core/slot/package.json
+++ b/packages/ui/core/slot/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@clutchd/component",
-  "version": "4.0.2",
-  "description": "A primitive component intended to be used as a foundation for all other ui components.",
+  "name": "@clutchd/slot",
+  "version": "2.0.2",
+  "description": "A utility component that merges it's props onto it's child.",
   "keywords": [
     "clutchd",
-    "component",
+    "slot",
     "ui"
   ],
   "bugs": {
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/primitives/component"
+    "directory": "packages/ui/core/slot"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -29,13 +29,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/slot": "workspace:*"
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/compose-refs": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@clutchd/twx": "workspace:*",
+    "@radix-ui/react-slot": "1.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
@@ -46,12 +47,6 @@
     "typescript": "5.2.2"
   },
   "peerDependencies": {
-    "@clutchd/twx": "^3.0.1",
     "react": "^18.2"
-  },
-  "peerDependenciesMeta": {
-    "@clutchd/twx": {
-      "optional": true
-    }
   }
 }
