--- a/packages/ui/layout/flex/package.json
+++ b/packages/ui/layout/flex/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/_unstable_/flex"
+    "directory": "packages/ui/layout/flex"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -38,9 +38,7 @@
     "@clutchd/tsconfig": "workspace:*",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
