--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,6 +15,7 @@
     "@clutchd/block": "workspace:*",
     "@clutchd/button": "workspace:*",
     "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
     "@clutchd/copyright": "workspace:*",
     "@clutchd/divider": "workspace:*",
     "@clutchd/flex": "workspace:*",
