--- a/packages/ui/core/component/package.json
+++ b/packages/ui/core/component/package.json
@@ -36,6 +36,7 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@clutchd/twx": "workspace:*",
+    "@radix-ui/react-primitive": "1.0.3",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
