--- a/packages/ui/core/compose-props/package.json
+++ b/packages/ui/core/compose-props/package.json
@@ -35,6 +35,7 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/react-slot": "1.0.2",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
     "jest": "29.6.1",
