--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.9",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "turbo": "latest"
+    "turbo": "^2.0.6"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -36,5 +36,6 @@
     "ignoredRules": [
       "INTERNAL_MISMATCH"
     ]
-  }
+  },
+  "packageManager": "pnpm@9.5.0"
 }
