--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "turbo": "^2.0.6"
   },
+  "packageManager": "pnpm@9.5.0",
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
@@ -36,6 +37,5 @@
     "ignoredRules": [
       "INTERNAL_MISMATCH"
     ]
-  },
-  "packageManager": "pnpm@9.5.0"
+  }
 }
