--- a/packages/tooling/config/package.json
+++ b/packages/tooling/config/package.json
@@ -22,6 +22,6 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
+    "lint": "biome check . --write"
   }
 }
