--- a/packages/utils/clsx/benchmark/package.json
+++ b/packages/utils/clsx/benchmark/package.json
@@ -2,7 +2,7 @@
   "name": "@clutchd/clsx-benchmark",
   "private": true,
   "scripts": {
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
+    "lint": "biome check . --write"
   },
   "devDependencies": {
     "@clutchd/clsx": "workspace:*",
