--- a/packages/utils/tailwind/package.json
+++ b/packages/utils/tailwind/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts-only --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
+    "lint": "biome check . --write",
     "prepublish": "pnpm run build",
     "test": "jest"
   },
